--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -8,7 +8,8 @@ body {
 
 .center-horizontally {
     position: relative;
-    left: 50%;
+    margin: 0 auto;
+    text-align: center;
 }
 
 .content {
@@ -16,7 +17,7 @@ body {
     width: 50%;
     border-radius: 5px;
     top: 40px;
-    display: absolute;
+    position: relative;
     color: #fff;
 }
 
