--- a/src/main/resources/templates/transcriptionResult.html
+++ b/src/main/resources/templates/transcriptionResult.html
@@ -33,10 +33,8 @@
     <hr>
 </div>
 <script>
-    const buttonId = '#copy_button_' + [[${output.responseNumber}]];
-    const transcriptId = 'transcript_' + [[${output.responseNumber}]];
-    $(buttonId).click(function (e) {
-        const text = document.getElementById(transcriptId).innerText;
+    $('#copy_button_' + [[${output.responseNumber}]]).click(function (e) {
+        const text = document.getElementById('transcript_' + [[${output.responseNumber}]]).innerText;
         const elem  =document.createElement('textarea');
         document.body.appendChild(elem);
         elem.value = text;
